Added mini gallery on home page/ Added Gallery page link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul class="links">
           <li><a href="">home</a></li>
           <li><a href="">bio</a></li>
-          <li><a href="">gallery</a></li>
+          <li><a href="pages/gallery.html">gallery</a></li>
           <li><a href="">print info</a></li>
           <li><a href="">contact</a></li>
         </ul>
@@ -26,7 +26,7 @@
 
     <div class="bio-container">
       <div class="left">
-        <h1>About Me:</h1>
+        <h1>About Me</h1>
         <p class="p-1">
           Born in 1949 in Brooklyn, New York, I received early exposure to art
           and artists through my father who had a studio in Manhattan, and was a
@@ -61,10 +61,38 @@
           beauty often found in uninhabited, light-struct spaces and take a
           meditative and contemplative approach towards image making.
         </p>
-        </div>
-        <div class="bio-img">
-        <img src="images/pic.jpg" alt="Man Taking Picture" />
-        </div>
       </div>
+      <div class="bio-img">
+        <img src="images/pic.jpg" alt="Man Taking Picture" />
+      </div>
+    </div>
+
+    <div class="gallery-header">
+      <h1>Gallery</h1>
+    </div>
+
+    <div class="gallery-example">
+      <div class="gal-1">
+        <img src="images/tornscreen.jpg" alt="Man Taking Picture" />
+      </div>
+      <div class="gal-2">
+        <img src="images/trainengine.jpg" alt="Man Taking Picture" />
+      </div>
+      <div class="gal-3">
+        <img src="images/treestump.jpg" alt="Man Taking Picture" />
+      </div>
+    </div>
+
+    <div class="gallery-page">
+      <a href="pages/gallery.html">
+        <button>View More</button>
+      </a>
+    </div>
+
+    <div class="footer-container">
+      <p>Copyright ©2004 Steve Balcourt. All Rights Reserved.</p>
+      <p>Site by <a href="https://jareds-portfolio.herokuapp.com">Jared Young</a></p>
+    </div>
+
   </body>
 </html>
