Added main gallery page with links for more gallery pages

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -5,10 +5,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../styles.css" />
     <link rel="home" href="index.html" />
 </head>
 <body>
-    <div>hello world!</div>
+    <div class="header-container-1">
+        <div class="left">
+          <div class="logo">Steve Balcourt</div>
+          <div>Photographic Artist</div>
+        </div>
+        <div class="right">
+          <ul class="links">
+            <li><a href="../index.html">home</a></li>
+            <li><a href="">bio</a></li>
+            <li><a href="pages/gallery.html">gallery</a></li>
+            <li><a href="">print info</a></li>
+            <li><a href="">contact</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="gallery-header">
+        <h1>Gallery</h1>
+      </div>
+
+      <div class="gallery-example">
+        <div class="gal-1">
+          <img src="../images/tornscreen.jpg" alt="Man Taking Picture" />
+        </div>
+        <div class="gal-2">
+          <img src="../images/trainengine.jpg" alt="Man Taking Picture" />
+        </div>
+        <div class="gal-3">
+          <img src="../images/treestump.jpg" alt="Man Taking Picture" />
+        </div>
+      </div>
+
+      <div class="gallery-example">
+        <div class="gal-1">
+          <img src="../images/truckdetail.jpg" alt="Man Taking Picture" />
+        </div>
+        <div class="gal-2">
+          <img src="../images/fallenbonnieroadWV.jpg" alt="Man Taking Picture" />
+        </div>
+        <div class="gal-3">
+          <img src="../images/gaspump.jpg" alt="Man Taking Picture" />
+        </div>
+      </div>
+
+      <div class="gallery-example">
+        <div class="gal-1">
+          <img src="../images/gasstationnearouterbanksNC.jpg" alt="Man Taking Picture" />
+        </div>
+        <div class="gal-2">
+          <img src="../images/essenceofthetruck.jpg" alt="Man Taking Picture" />
+        </div>
+        <div class="gal-3">
+          <img src="../images/peelingpaint.jpg" alt="Man Taking Picture" />
+        </div>
+      </div>
+
+      <ul class="gal-pages">
+        <li><a href="">1</a></li>
+        <li><a href="">2</a></li>
+        <li><a href="">3</a></li>
+        <li><a href="">4</a></li>
+      </ul>
+
+      <div class="footer-container">
+        <p>Copyright ©2004 Steve Balcourt. All Rights Reserved.</p>
+        <p>Site by <a href="https://jareds-portfolio.herokuapp.com">Jared Young</a></p>
+      </div>
 </body>
 </html>
