Added main gal page 2 with link to page 1

--- a/pages/gallery-page-2.html
+++ b/pages/gallery-page-2.html
@@ -31,10 +31,22 @@
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/tornscreen.jpg" alt="Man Taking Picture" />
+          <img src="../images/porchdetail.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/trainengine.jpg" alt="Man Taking Picture" />
+          <img src="../images/catindoorway.jpg" alt="Man Taking Picture" />
+        </div>
+        <div class="gal-3">
+          <img src="../images/door32.jpg" alt="Man Taking Picture" />
+        </div>
+      </div>
+
+      <div class="gallery-example">
+        <div class="gal-1">
+          <img src="../images/Hay-Bale.jpg" alt="Man Taking Picture" />
+        </div>
+        <div class="gal-2">
+          <img src="../images/headlight.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
           <img src="../images/treestump.jpg" alt="Man Taking Picture" />
@@ -43,31 +55,19 @@
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/truckdetail.jpg" alt="Man Taking Picture" />
+          <img src="../images/hollyriver.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/fallenbonnieroadWV.jpg" alt="Man Taking Picture" />
+          <img src="../images/STONE-ARCH.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
-          <img src="../images/gaspump.jpg" alt="Man Taking Picture" />
-        </div>
-      </div>
-
-      <div class="gallery-example">
-        <div class="gal-1">
-          <img src="../images/gasstationnearouterbanksNC.jpg" alt="Man Taking Picture" />
-        </div>
-        <div class="gal-2">
-          <img src="../images/essenceofthetruck.jpg" alt="Man Taking Picture" />
-        </div>
-        <div class="gal-3">
-          <img src="../images/peelingpaint.jpg" alt="Man Taking Picture" />
+          <img src="../images/approachingstorm.jpg" alt="Man Taking Picture" />
         </div>
       </div>
 
       <ul class="gal-pages">
-        <li><a href="">1</a></li>
-        <li><a href="gallery-page-2.html">2</a></li>
+        <li><a href="./gallery.html">1</a></li>
+        <li><a href="">2</a></li>
         <li><a href="">3</a></li>
         <li><a href="">4</a></li>
       </ul>
