--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
 
     <div class="gallery-header">
-      <h1>Gallery</h1>
+      <h1>Gallery Example</h1>
     </div>
 
     <div class="gallery-example">
