--- a/pages/gallery-page-2.html
+++ b/pages/gallery-page-2.html
@@ -31,45 +31,45 @@
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/churchdoorbulltownWV.jpg" alt="Man Taking Picture" />
+          <img src="../images/porchdetail.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/motelchair.jpg" alt="Man Taking Picture" />
+          <img src="../images/catindoorway.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
-          <img src="../images/oldtruck.jpg" alt="Man Taking Picture" />
+          <img src="../images/door32.jpg" alt="Man Taking Picture" />
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/HOLLEY-RIVER.jpg" alt="Man Taking Picture" />
+          <img src="../images/Hay-Bale.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/roots2.jpg" alt="Man Taking Picture" />
+          <img src="../images/headlight.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
-          <img src="../images/tabbyhouse.jpg" alt="Man Taking Picture" />
+          <img src="../images/Tree-Stumps,-Falls-Mill,-WV.jpg" alt="Man Taking Picture" />
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/tabbyhousesun.jpg" alt="Man Taking Picture" />
+          <img src="../images/hollyriver.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/ORCHARD.jpg" alt="Man Taking Picture" />
+          <img src="../images/STONE-ARCH.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
-          <img src="../images/ROCKS.jpg" alt="Man Taking Picture" />
+          <img src="../images/approachingstorm.jpg" alt="Man Taking Picture" />
         </div>
       </div>
 
       <ul class="gal-pages">
         <li><a href="./gallery.html">1</a></li>
-        <li><a href="">2</a></li>
+        <li><a href="active">2</a></li>
         <li><a href="gallery-page-3.html">3</a></li>
-        <li><a href="">4</a></li>
+        <li><a href="gallery-page-4.html">4</a></li>
       </ul>
 
       <div class="footer-container">
