--- a/pages/gallery-page-3.html
+++ b/pages/gallery-page-3.html
@@ -31,37 +31,37 @@
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/tornscreen.jpg" alt="Man Taking Picture" />
+          <img src="../images/churchdoorbulltownWV.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/trainengine.jpg" alt="Man Taking Picture" />
+          <img src="../images/motelchair.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
-          <img src="../images/treestump.jpg" alt="Man Taking Picture" />
+          <img src="../images/oldtruck.jpg" alt="Man Taking Picture" />
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/truckdetail.jpg" alt="Man Taking Picture" />
+          <img src="../images/HOLLEY-RIVER.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/fallenbonnieroadWV.jpg" alt="Man Taking Picture" />
+          <img src="../images/roots2.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
-          <img src="../images/gaspump.jpg" alt="Man Taking Picture" />
+          <img src="../images/tabbyhouse.jpg" alt="Man Taking Picture" />
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/gasstationnearouterbanksNC.jpg" alt="Man Taking Picture" />
+          <img src="../images/tabbyhousesun.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/essenceofthetruck.jpg" alt="Man Taking Picture" />
+          <img src="../images/ORCHARD.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
-          <img src="../images/peelingpaint.jpg" alt="Man Taking Picture" />
+          <img src="../images/rocks.jpg" alt="Man Taking Picture" />
         </div>
       </div>
 
@@ -69,7 +69,7 @@
         <li><a href="./gallery.html">1</a></li>
         <li><a href="gallery-page-2.html">2</a></li>
         <li><a href="active">3</a></li>
-        <li><a href="">4</a></li>
+        <li><a href="gallery-page-4.html">4</a></li>
       </ul>
 
       <div class="footer-container">
