--- a/pages/gallery-page-4.html
+++ b/pages/gallery-page-4.html
@@ -31,45 +31,45 @@
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/tornscreen.jpg" alt="Man Taking Picture" />
+          <img src="../images/LOST-HIGHWAY.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/trainengine.jpg" alt="Man Taking Picture" />
+          <img src="../images/SUPER-CHIEF.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
-          <img src="../images/treestump.jpg" alt="Man Taking Picture" />
+          <img src="../images/HILLS-FALLS.jpg" alt="Man Taking Picture" />
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/truckdetail.jpg" alt="Man Taking Picture" />
+          <img src="../images/WINDOW-AND-TORN-CURTAIN.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/fallenbonnieroadWV.jpg" alt="Man Taking Picture" />
+          <img src="../images/LIVE-OAK.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
-          <img src="../images/gaspump.jpg" alt="Man Taking Picture" />
+          <img src="../images/FENCE-AND-FOG.jpg" alt="Man Taking Picture" />
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/gasstationnearouterbanksNC.jpg" alt="Man Taking Picture" />
+          <img src="../images/WOOD.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/essenceofthetruck.jpg" alt="Man Taking Picture" />
+          <img src="../images/REFLECTING-POOL.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
-          <img src="../images/peelingpaint.jpg" alt="Man Taking Picture" />
+          <img src="../images/HacksCarryOut.jpg" alt="Man Taking Picture" />
         </div>
       </div>
 
       <ul class="gal-pages">
-        <li><a href="active">1</a></li>
+        <li><a href="./gallery.html">1</a></li>
         <li><a href="gallery-page-2.html">2</a></li>
         <li><a href="gallery-page-3.html">3</a></li>
-        <li><a href="gallery-page-4.html">4</a></li>
+        <li><a href="active">4</a></li>
       </ul>
 
       <div class="footer-container">
