--- a/pages/gallery-page-3.html
+++ b/pages/gallery-page-3.html
@@ -19,7 +19,7 @@
             <li><a href="../index.html">home</a></li>
             <li><a href="">bio</a></li>
             <li><a href="pages/gallery.html">gallery</a></li>
-            <li><a href="">print info</a></li>
+            <li><a href="pages/print-info.html">print info</a></li>
             <li><a href="">contact</a></li>
           </ul>
         </div>
