--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
     <link rel="stylesheet" href="../styles.css" />
-    <link rel="home" href="index.html" />
 </head>
 <body>
     <div class="header-container-1">
@@ -19,7 +18,7 @@
             <li><a href="../index.html">home</a></li>
             <li><a href="">bio</a></li>
             <li><a href="pages/gallery.html">gallery</a></li>
-            <li><a href="">print info</a></li>
+            <li><a href="pages/print-info.html">print info</a></li>
             <li><a href="">contact</a></li>
           </ul>
         </div>
