Added the word pages to the bottom page links and corrected link paths

--- a/pages/gallery-page-2.html
+++ b/pages/gallery-page-2.html
@@ -17,9 +17,8 @@
         <div class="right">
           <ul class="links">
             <li><a href="../index.html">home</a></li>
-            <li><a href="">bio</a></li>
-            <li><a href="pages/gallery.html">gallery</a></li>
-            <li><a href="pages/print-info.html">print info</a></li>
+            <li><a href="./gallery.html">gallery</a></li>
+            <li><a href="./print-info.html">print info</a></li>
             <li><a href="">contact</a></li>
           </ul>
         </div>
@@ -66,6 +65,7 @@
       </div>
 
       <ul class="gal-pages">
+        <li>Page:</li>
         <li><a href="./gallery.html">1</a></li>
         <li><a href="active">2</a></li>
         <li><a href="gallery-page-3.html">3</a></li>
