--- a/pages/print-info.html
+++ b/pages/print-info.html
@@ -16,8 +16,7 @@
         <div class="right">
           <ul class="links">
             <li><a href="../index.html">home</a></li>
-            <li><a href="">bio</a></li>
-            <li><a href="pages/gallery.html">gallery</a></li>
+            <li><a href="./gallery.html">gallery</a></li>
             <li><a href="">print info</a></li>
             <li><a href="">contact</a></li>
           </ul>
