--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li><a href="">home</a></li>
           <li><a href="pages/gallery.html">gallery</a></li>
           <li><a href="pages/print-info.html">print info</a></li>
-          <li><a href="">contact</a></li>
+          <li><a href="pages/contact.html">contact</a></li>
         </ul>
       </div>
     </div>
