Corrected Copyright Dates

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </div>
 
     <div class="footer-container">
-      <p>Copyright ©2004 Steve Balcourt. All Rights Reserved.</p>
+      <p>Copyright ©1999-Present Steve Balcourt. All Rights Reserved.</p>
       <p>Site by <a href="https://jareds-portfolio.herokuapp.com">Jared Young</a></p>
     </div>
 
