Added active css to according pages

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <div class="right">
         <ul class="links">
-          <li><a href="">home</a></li>
+          <li><a class="active" href="">home</a></li>
           <li><a href="pages/gallery.html">gallery</a></li>
           <li><a href="pages/print-info.html">print info</a></li>
           <li><a href="pages/contact.html">contact</a></li>
