--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -16,9 +16,9 @@
         <div class="right">
           <ul class="links">
             <li><a href="../index.html">home</a></li>
-            <li><a href="./pages/gallery.html">gallery</a></li>
+            <li><a class="active" href="">gallery</a></li>
             <li><a href="./print-info.html">print info</a></li>
-            <li><a href="">contact</a></li>
+            <li><a href="./contact.html">contact</a></li>
           </ul>
         </div>
       </div>
@@ -65,7 +65,7 @@
 
       <ul class="gal-pages">
         <li>Page:</li>
-        <li><a href="active">1</a></li>
+        <li><a class="active" href="">1</a></li>
         <li><a href="gallery-page-2.html">2</a></li>
         <li><a href="gallery-page-3.html">3</a></li>
         <li><a href="gallery-page-4.html">4</a></li>
