--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,7 +18,7 @@
             <li><a href="../index.html">home</a></li>
             <li><a href="./gallery.html">gallery</a></li>
             <li><a href="./print-info.html">print info</a></li>
-            <li><a href="">contact</a></li>
+            <li><a class="active" href="">contact</a></li>
           </ul>
         </div>
       </div>
