--- a/pages/gallery-page-2.html
+++ b/pages/gallery-page-2.html
@@ -17,9 +17,9 @@
         <div class="right">
           <ul class="links">
             <li><a href="../index.html">home</a></li>
-            <li><a href="./gallery.html">gallery</a></li>
+            <li><a class="active" href="./gallery.html">gallery</a></li>
             <li><a href="./print-info.html">print info</a></li>
-            <li><a href="">contact</a></li>
+            <li><a href="./contact.html">contact</a></li>
           </ul>
         </div>
       </div>
@@ -66,8 +66,8 @@
 
       <ul class="gal-pages">
         <li>Page:</li>
-        <li><a href="./gallery.html">1</a></li>
-        <li><a href="active">2</a></li>
+        <li><a href="gallery.html">1</a></li>
+        <li><a class="active" href="">2</a></li>
         <li><a href="gallery-page-3.html">3</a></li>
         <li><a href="gallery-page-4.html">4</a></li>
       </ul>
