--- a/pages/print-info.html
+++ b/pages/print-info.html
@@ -17,8 +17,8 @@
           <ul class="links">
             <li><a href="../index.html">home</a></li>
             <li><a href="./gallery.html">gallery</a></li>
-            <li><a href="">print info</a></li>
-            <li><a href="">contact</a></li>
+            <li><a class="active" href="">print info</a></li>
+            <li><a href="./contact.html">contact</a></li>
           </ul>
         </div>
       </div>
