--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -27,6 +27,14 @@
         <h1>Gallery</h1>
       </div>
 
+      <ul class="gal-pages">
+        <li>Page:</li>
+        <li><a class="active" href="">1</a></li>
+        <li><a href="gallery-page-2.html">2</a></li>
+        <li><a href="gallery-page-3.html">3</a></li>
+        <li><a href="gallery-page-4.html">4</a></li>
+      </ul>
+
       <div class="gallery-example">
         <div class="gal-1">
           <img src="../images/tornscreen.jpg" alt="Man Taking Picture" />
