Added Zoom Hover feature on gallery photos

--- a/pages/gallery-page-3.html
+++ b/pages/gallery-page-3.html
@@ -38,37 +38,37 @@
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/churchdoorbulltownWV.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/churchdoorbulltownWV.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/motelchair.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/motelchair.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
-          <img src="../images/oldtruck.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/oldtruck.jpg" alt="Man Taking Picture" />
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/HOLLEY-RIVER.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/HOLLEY-RIVER.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/roots2.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/roots2.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
-          <img src="../images/tabbyhouse.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/tabbyhouse.jpg" alt="Man Taking Picture" />
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/tabbyhousesun.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/tabbyhousesun.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/ORCHARD.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/ORCHARD.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
-          <img src="../images/rocks.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/rocks.jpg" alt="Man Taking Picture" />
         </div>
       </div>
 
