--- a/pages/gallery-page-4.html
+++ b/pages/gallery-page-4.html
@@ -38,37 +38,37 @@
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/LOST-HIGHWAY.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/LOST-HIGHWAY.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/SUPER-CHIEF.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/SUPER-CHIEF.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
-          <img src="../images/HILLS-FALLS.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/HILLS-FALLS.jpg" alt="Man Taking Picture" />
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/WINDOW-AND-TORN-CURTAIN.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/WINDOW-AND-TORN-CURTAIN.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/LIVE-OAK.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/LIVE-OAK.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
-          <img src="../images/FENCE-AND-FOG.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/FENCE-AND-FOG.jpg" alt="Man Taking Picture" />
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/WOOD.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/WOOD.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/REFLECTING-POOL.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/REFLECTING-POOL.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
-          <img src="../images/HacksCarryOut.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/HacksCarryOut.jpg" alt="Man Taking Picture" />
         </div>
       </div>
 
