--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -37,37 +37,37 @@
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/tornscreen.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/tornscreen.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/trainengine.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/trainengine.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
-          <img src="../images/treestump.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/treestump.jpg" alt="Man Taking Picture" />
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/truckdetail.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/truckdetail.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/fallenbonnieroadWV.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/fallenbonnieroadWV.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
-          <img src="../images/gaspump.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/gaspump.jpg" alt="Man Taking Picture" />
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/gasstationnearouterbanksNC.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/gasstationnearouterbanksNC.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/essenceofthetruck.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/essenceofthetruck.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
-          <img src="../images/peelingpaint.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/peelingpaint.jpg" alt="Man Taking Picture" />
         </div>
       </div>
 
