--- a/pages/gallery-page-2.html
+++ b/pages/gallery-page-2.html
@@ -38,37 +38,37 @@
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/porchdetail.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/porchdetail.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/catindoorway.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/catindoorway.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
-          <img src="../images/door32.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/door32.jpg" alt="Man Taking Picture" />
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/Hay-Bale.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/Hay-Bale.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/headlight.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/headlight.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
-          <img src="../images/Tree-Stumps,-Falls-Mill,-WV.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/Tree-Stumps,-Falls-Mill,-WV.jpg" alt="Man Taking Picture" />
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img src="../images/hollyriver.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/hollyriver.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-2">
-          <img src="../images/STONE-ARCH.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/STONE-ARCH.jpg" alt="Man Taking Picture" />
         </div>
         <div class="gal-3">
-          <img src="../images/approachingstorm.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/approachingstorm.jpg" alt="Man Taking Picture" />
         </div>
       </div>
 
