--- a/pages/gallery-page-2.html
+++ b/pages/gallery-page-2.html
@@ -39,36 +39,45 @@
       <div class="gallery-example">
         <div class="gal-1">
           <img class="zoom" src="../images/porchdetail.jpg" alt="Man Taking Picture" />
+        <p>Porch Detail</p>
         </div>
         <div class="gal-2">
           <img class="zoom" src="../images/catindoorway.jpg" alt="Man Taking Picture" />
+        <p>Cat In Doorway</p>
         </div>
         <div class="gal-3">
           <img class="zoom" src="../images/door32.jpg" alt="Man Taking Picture" />
+        <p>DOOR #32</p>
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
           <img class="zoom" src="../images/Hay-Bale.jpg" alt="Man Taking Picture" />
+        <p>Hay Bale</p>
         </div>
         <div class="gal-2">
           <img class="zoom" src="../images/headlight.jpg" alt="Man Taking Picture" />
+        <p>Headlight</p>
         </div>
         <div class="gal-3">
           <img class="zoom" src="../images/Tree-Stumps,-Falls-Mill,-WV.jpg" alt="Man Taking Picture" />
+        <p>Tree Stumps</p>
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
           <img class="zoom" src="../images/hollyriver.jpg" alt="Man Taking Picture" />
+        <p>Holly River</p>
         </div>
         <div class="gal-2">
           <img class="zoom" src="../images/STONE-ARCH.jpg" alt="Man Taking Picture" />
+        <p>Stone Arch</p>
         </div>
         <div class="gal-3">
           <img class="zoom" src="../images/approachingstorm.jpg" alt="Man Taking Picture" />
+        <p>Approaching Storm</p>
         </div>
       </div>
 
