Added Photo Titles to Page 3 of Gallery

--- a/pages/gallery-page-3.html
+++ b/pages/gallery-page-3.html
@@ -39,36 +39,45 @@
       <div class="gallery-example">
         <div class="gal-1">
           <img class="zoom" src="../images/churchdoorbulltownWV.jpg" alt="Man Taking Picture" />
+        <p>Church Door, Bulltown, WV</p>
         </div>
         <div class="gal-2">
           <img class="zoom" src="../images/motelchair.jpg" alt="Man Taking Picture" />
+        <p>Motel Chair</p>
         </div>
         <div class="gal-3">
           <img class="zoom" src="../images/oldtruck.jpg" alt="Man Taking Picture" />
+        <p>Old Truck, Braxton County, WV</p>
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
           <img class="zoom" src="../images/HOLLEY-RIVER.jpg" alt="Man Taking Picture" />
+        <p>Holly River</p>
         </div>
         <div class="gal-2">
           <img class="zoom" src="../images/roots2.jpg" alt="Man Taking Picture" />
+        <p>Roots #2</p>
         </div>
         <div class="gal-3">
           <img class="zoom" src="../images/tabbyhouse.jpg" alt="Man Taking Picture" />
+        <p>Tabby House</p>
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
           <img class="zoom" src="../images/tabbyhousesun.jpg" alt="Man Taking Picture" />
+        <p>Tabby House Sunset</p>
         </div>
         <div class="gal-2">
           <img class="zoom" src="../images/ORCHARD.jpg" alt="Man Taking Picture" />
+        <p>Orchard</p>
         </div>
         <div class="gal-3">
           <img class="zoom" src="../images/rocks.jpg" alt="Man Taking Picture" />
+        <p>Rocks</p>
         </div>
       </div>
 
