Added Photo Titles to Page 4 of Gallery

--- a/pages/gallery-page-4.html
+++ b/pages/gallery-page-4.html
@@ -39,36 +39,45 @@
       <div class="gallery-example">
         <div class="gal-1">
           <img class="zoom" src="../images/LOST-HIGHWAY.jpg" alt="Man Taking Picture" />
+        <p>Lost Highway</p>
         </div>
         <div class="gal-2">
           <img class="zoom" src="../images/SUPER-CHIEF.jpg" alt="Man Taking Picture" />
+        <p>Super Chief</p>
         </div>
         <div class="gal-3">
           <img class="zoom" src="../images/HILLS-FALLS.jpg" alt="Man Taking Picture" />
+        <p>Hills Falls</p>
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
           <img class="zoom" src="../images/WINDOW-AND-TORN-CURTAIN.jpg" alt="Man Taking Picture" />
+        <p>Window and Torn Curtain</p>
         </div>
         <div class="gal-2">
           <img class="zoom" src="../images/LIVE-OAK.jpg" alt="Man Taking Picture" />
+        <p>Live Oak</p>
         </div>
         <div class="gal-3">
           <img class="zoom" src="../images/FENCE-AND-FOG.jpg" alt="Man Taking Picture" />
+        <p>Fence and Fog</p>
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
           <img class="zoom" src="../images/WOOD.jpg" alt="Man Taking Picture" />
+        <p>Wood</p>
         </div>
         <div class="gal-2">
           <img class="zoom" src="../images/REFLECTING-POOL.jpg" alt="Man Taking Picture" />
+        <p>Reflecting Pool</p>
         </div>
         <div class="gal-3">
           <img class="zoom" src="../images/HacksCarryOut.jpg" alt="Man Taking Picture" />
+        <p>Hack's Carry Out</p>
         </div>
       </div>
 
