--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -38,45 +38,45 @@
       <div class="gallery-example">
         <div class="gal-1">
           <img class="zoom" src="../images/tornscreen.jpg" alt="Man Taking Picture" />
-        <p>Torn Screen Two Windows</p>
+        <p>#1 Torn Screen Two Windows</p>
         </div>
         <div class="gal-2">
           <img class="zoom" src="../images/trainengine.jpg" alt="Man Taking Picture" />
-        <p>Train Engine</p>
+        <p>#2 Train Engine</p>
         </div>
         <div class="gal-3">
           <img class="zoom" src="../images/treestump.jpg" alt="Man Taking Picture" />
-        <p>Tree Stump</p>
+        <p>#3 Tree Stump</p>
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
           <img class="zoom" src="../images/truckdetail.jpg" alt="Man Taking Picture" />
-          <p>Truck Detail</p>
+          <p>#4 Truck Detail</p>
         </div>
         <div class="gal-2">
           <img class="zoom" src="../images/fallenbonnieroadWV.jpg" alt="Man Taking Picture" />
-        <p>Fallen, Bonnie Road, WV</p>
+        <p>#5 Fallen, Bonnie Road, WV</p>
         </div>
         <div class="gal-3">
           <img class="zoom" src="../images/gaspump.jpg" alt="Man Taking Picture" />
-        <p>Gas Pump</p>
+        <p>#6 Gas Pump</p>
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
           <img class="zoom" src="../images/gasstationnearouterbanksNC.jpg" alt="Man Taking Picture" />
-        <p>Gas Station Near Outer Banks, NC</p>
+        <p>#7 Gas Station Near Outer Banks, NC</p>
         </div>
         <div class="gal-2">
           <img class="zoom" src="../images/essenceofthetruck.jpg" alt="Man Taking Picture" />
-        <p>Essence of the Truck</p>
+        <p>#8 Essence of the Truck</p>
         </div>
         <div class="gal-3">
           <img class="zoom" src="../images/peelingpaint.jpg" alt="Man Taking Picture" />
-        <p>Peeling Paint Door and Window, Exchange, WV</p>
+        <p>#9 Peeling Paint Door and Window, Exchange, WV</p>
         </div>
       </div>
 
