Added Photo # to Gallery page 4

--- a/pages/gallery-page-4.html
+++ b/pages/gallery-page-4.html
@@ -39,45 +39,45 @@
       <div class="gallery-example">
         <div class="gal-1">
           <img class="zoom" src="../images/LOST-HIGHWAY.jpg" alt="Man Taking Picture" />
-        <p>Lost Highway</p>
+        <p>#28 Lost Highway</p>
         </div>
         <div class="gal-2">
           <img class="zoom" src="../images/SUPER-CHIEF.jpg" alt="Man Taking Picture" />
-        <p>Super Chief</p>
+        <p>#29 Super Chief</p>
         </div>
         <div class="gal-3">
           <img class="zoom" src="../images/HILLS-FALLS.jpg" alt="Man Taking Picture" />
-        <p>Hills Falls</p>
+        <p>#30 Hills Falls</p>
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
           <img class="zoom" src="../images/WINDOW-AND-TORN-CURTAIN.jpg" alt="Man Taking Picture" />
-        <p>Window and Torn Curtain</p>
+        <p>#31 Window and Torn Curtain</p>
         </div>
         <div class="gal-2">
           <img class="zoom" src="../images/LIVE-OAK.jpg" alt="Man Taking Picture" />
-        <p>Live Oak</p>
+        <p>#32 Live Oak</p>
         </div>
         <div class="gal-3">
           <img class="zoom" src="../images/FENCE-AND-FOG.jpg" alt="Man Taking Picture" />
-        <p>Fence and Fog</p>
+        <p>#33 Fence and Fog</p>
         </div>
       </div>
 
       <div class="gallery-example">
         <div class="gal-1">
           <img class="zoom" src="../images/WOOD.jpg" alt="Man Taking Picture" />
-        <p>Wood</p>
+        <p>#34 Wood</p>
         </div>
         <div class="gal-2">
           <img class="zoom" src="../images/REFLECTING-POOL.jpg" alt="Man Taking Picture" />
-        <p>Reflecting Pool</p>
+        <p>#35 Reflecting Pool</p>
         </div>
         <div class="gal-3">
           <img class="zoom" src="../images/HacksCarryOut.jpg" alt="Man Taking Picture" />
-        <p>Hack's Carry Out</p>
+        <p>#36 Hack's Carry Out</p>
         </div>
       </div>
 
