added image to home screen & 2 Fonts

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       </div>
     </div>
 
+    <div>
+      <img src="images/Scan 16.jpeg" alt="Man Taking Picture" />
+    </div>
+
     <div class="bio-container">
       <div class="left">
         <h1>About Me</h1>
