Adjusted Font size/location on copyright for each page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -36,9 +36,12 @@
       </div>
   
 
-      <div class="footer-container">
+      <div class="footer">
         <p>Copyright ©1999-Present Steve Balcourt. All Rights Reserved.</p>
+      </div>
+  
+      <div class="site-by">
         <p>Site by <a href="https://jareds-portfolio.herokuapp.com">Jared Young</a></p>
-      </div>  
-</body>
+      </div>
+  </body>
 </html>
