--- a/pages/gallery-page-4.html
+++ b/pages/gallery-page-4.html
@@ -89,9 +89,12 @@
         <li><a class="active" href="">4</a></li>
       </ul>
 
-      <div class="footer-container">
+      <div class="footer">
         <p>Copyright ©1999-Present Steve Balcourt. All Rights Reserved.</p>
+      </div>
+  
+      <div class="site-by">
         <p>Site by <a href="https://jareds-portfolio.herokuapp.com">Jared Young</a></p>
       </div>
-</body>
+  </body>
 </html>
