--- a/index.html
+++ b/index.html
@@ -92,8 +92,11 @@
       </a>
     </div>
 
-    <div class="footer-container">
+    <div class="footer">
       <p>Copyright ©1999-Present Steve Balcourt. All Rights Reserved.</p>
+    </div>
+
+    <div class="site-by">
       <p>Site by <a href="https://jareds-portfolio.herokuapp.com">Jared Young</a></p>
     </div>
 
