--- a/pages/contact.html
+++ b/pages/contact.html
@@ -27,11 +27,14 @@
       </div> 
 
       <div class="contact-container">
+        <div class="bio-img">
+          <img src="../images/stevecamera.jpg" alt="Steve taking picture" />
+        </div>
         <div class="left">
           <p>You can contact Steve Balcourt at his email address steve@stevebalcourtphoto.com. He will answer all request on a timely basis.</p>
         </div>
         <div class="bio-img">
-          <img src="../images/stevecamera2.jpg" alt="Man by Camera" />
+          <img src="../images/stevecamera2.jpg" alt="Steve standing by Camera" />
         </div>
       </div>
   
