add and adjust to image on print info page and adjusted font size

--- a/pages/print-info.html
+++ b/pages/print-info.html
@@ -33,7 +33,7 @@
       </div>
 
       <div class="print-info-img">
-        <img src="../images/stevecamera.jpg" alt="Man Taking Picture" />
+        <img src="../images/darkroom.jpeg" alt="Man Taking Picture" />
       </div>
 
       <div class="footer">
