Switch photos around on gal page 1 & 3, centered gal title and adjusted font size

--- a/pages/gallery-page-3.html
+++ b/pages/gallery-page-3.html
@@ -53,8 +53,8 @@
 
       <div class="gallery-example">
         <div class="gal-1">
-          <img class="zoom" src="../images/HOLLEY-RIVER.jpg" alt="Man Taking Picture" />
-        <p>#22 Holly River</p>
+          <img class="zoom" src="../images/fallenbonnieroadWV.jpg" alt="Man Taking Picture" />
+        <p>#22 Fallen, Bonnie Road, WV</p>
         </div>
         <div class="gal-2">
           <img class="zoom" src="../images/roots2.jpg" alt="Man Taking Picture" />
