--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -56,8 +56,8 @@
           <p>#4 Truck Detail</p>
         </div>
         <div class="gal-2">
-          <img class="zoom" src="../images/fallenbonnieroadWV.jpg" alt="Man Taking Picture" />
-        <p>#5 Fallen, Bonnie Road, WV</p>
+          <img class="zoom" src="../images/HOLLEY-RIVER.jpg" alt="Man Taking Picture" />
+        <p>#5 Holley River</p>
         </div>
         <div class="gal-3">
           <img class="zoom" src="../images/gaspump.jpg" alt="Man Taking Picture" />
