Fix link to image #27 to display correctly

--- a/pages/gallery-page-3.html
+++ b/pages/gallery-page-3.html
@@ -76,7 +76,7 @@
         <p>#26 Orchard</p>
         </div>
         <div class="gal-3">
-          <img class="zoom" src="../images/rocks.jpg" alt="Man Taking Picture" />
+          <img class="zoom" src="../images/ROCKS.jpg" alt="Man Taking Picture" />
         <p>#27 Rocks</p>
         </div>
       </div>
