typo correction on print info and added additional image on home page

--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
       </div>
       <div class="bio-img">
         <img src="images/pic.jpg" alt="Man Taking Picture" />
+      <div class="bio-img-2">
+        <img src="images/My project-1.jpg" alt="Man Taking Picture" />
       </div>
+    </div>
     </div>
 
     <div class="gallery-header">
