--- a/pages/contact.html
+++ b/pages/contact.html
@@ -31,7 +31,7 @@
           <img src="../images/stevecamera.jpg" alt="Steve taking picture" />
         </div>
         <div class="left">
-          <p>You can contact Steve Balcourt at his email address steve@stevebalcourtphoto.com. He will answer all request on a timely basis.</p>
+          <p>You can contact Steve Balcourt at his email address steve@stevebalcourtphoto.com. He will answer all requests on a timely basis.</p>
         </div>
         <div class="bio-img">
           <img src="../images/stevecamera2.jpg" alt="Steve standing by Camera" />
