--- a/index.html
+++ b/index.html
@@ -34,43 +34,82 @@
           Born in 1949 in Brooklyn, New York, I received early exposure to art
           and artists through my father who had a studio in Manhattan, and was a
           photo-realist painter and illustrator of book covers and movie
-          posters. It was my dad who encouraged me to develop an interest for
-          photography and pursue an education in the field of image making.
+          posters<span style="font-family: Arial, Helvetica, sans-serif"
+            >.</span
+          >
+          It was my dad who encouraged me to develop an interest for photography
+          and pursue an education in the field of image making<span
+            style="font-family: Arial, Helvetica, sans-serif"
+            >.</span
+          >
         </p>
         <p class="p-2">
           I started making photographs in 1966 as editor of my high school
-          yearbook, using a Rolliflex 120mm twin lens reflex camera. I built a
-          darkroom in the basement of my parents house, and developed a great
-          love for the wondrous process of print making and film developing. My
-          earliest images were photographs made on the streets of NYC, and
-          consisted mainly of architectural details and candid shots of people.
+          yearbook, using a Rolliflex 120mm twin lens reflex camera<span
+            style="font-family: Arial, Helvetica, sans-serif"
+            >.</span
+          >
+          I built a darkroom in the basement of my parents house, and developed
+          a great love for the wondrous process of print making and film
+          developing<span style="font-family: Arial, Helvetica, sans-serif"
+            >.</span
+          >
+          My earliest images were photographs made on the streets of NYC, and
+          consisted mainly of architectural details and candid shots of
+          people<span style="font-family: Arial, Helvetica, sans-serif">.</span>
         </p>
         <p class="p-3">
           After graduating high school I studied fashion photography at the
-          Fashion Institute Of Technology in NYC. As a student of commercial
-          photography at the Art Center College Of Design in Los Angeles, I was
-          introduced to, and learned to master the use of large format view
-          cameras.
+          Fashion Institute Of Technology in NYC<span
+            style="font-family: Arial, Helvetica, sans-serif"
+            >.</span
+          >
+          As a student of commercial photography at the Art Center College Of
+          Design in Los Angeles, I was introduced to, and learned to master the
+          use of large format view cameras<span
+            style="font-family: Arial, Helvetica, sans-serif"
+            >.</span
+          >
         </p>
         <p class="p-4">
           My current images are made with an 8X10 wood field camera, using old
-          Goerz Dagor and Artar lenses. I make silver chloride contact prints
-          from my negatives. I also produce Platinum/Palladium prints of select
-          images in limited editions. I do not make photographic images to be
-          enlarged, but see them as contact prints from the beginning. I am very
-          much influenced by the images and photographic styles of such artists
-          as Edward Weston, Wynn Bullock, Paul Strand, Brett Weston, Minor White
-          and Paul Caponigro. I choose to point my lens at the undisturbed
-          beauty often found in uninhabited, light-struct spaces and take a
-          meditative and contemplative approach towards image making.
+          Goerz Dagor and Artar lenses<span
+            style="font-family: Arial, Helvetica, sans-serif"
+            >.</span
+          >
+          I make silver chloride contact prints from my negatives<span
+            style="font-family: Arial, Helvetica, sans-serif"
+            >.</span
+          >
+          I also produce Platinum/Palladium prints of select images in limited
+          editions<span style="font-family: Arial, Helvetica, sans-serif"
+            >.</span
+          >
+          I do not make photographic images to be enlarged, but see them as
+          contact prints from the beginning<span
+            style="font-family: Arial, Helvetica, sans-serif"
+            >.</span
+          >
+          I am very much influenced by the images and photographic styles of
+          such artists as Edward Weston, Wynn Bullock, Paul Strand, Brett
+          Weston, Minor White and Paul Caponigro<span
+            style="font-family: Arial, Helvetica, sans-serif"
+            >.</span
+          >
+          I choose to point my lens at the undisturbed beauty often found in
+          uninhabited, light-struct spaces and take a meditative and
+          contemplative approach towards image making<span
+            style="font-family: Arial, Helvetica, sans-serif"
+            >.</span
+          >
         </p>
       </div>
       <div class="bio-img">
         <img src="images/pic.jpg" alt="Man Taking Picture" />
-      <div class="bio-img-2">
-        <img src="images/My project-1.jpg" alt="Man Taking Picture" />
+        <div class="bio-img-2">
+          <img src="images/My project-1.jpg" alt="Man Taking Picture" />
+        </div>
       </div>
-    </div>
     </div>
 
     <div class="gallery-header">
@@ -100,8 +139,9 @@
     </div>
 
     <div class="site-by">
-      <p>Site by <a href="https://jareds-portfolio.herokuapp.com">Jared Young</a></p>
+      <p>
+        Site by <a href="https://jareds-portfolio.herokuapp.com">Jared Young</a>
+      </p>
     </div>
-
   </body>
 </html>
