replaced img on left of contact screen with new img

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,50 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
     <link rel="stylesheet" href="../styles.css" />
-</head>
-<body>
+  </head>
+  <body>
     <div class="header-container-1">
-        <div class="left">
-          <div class="logo">Steve Balcourt</div>
-          <div>Photographic Artist</div>
-        </div>
-        <div class="right">
-          <ul class="links">
-            <li><a href="../index.html">home</a></li>
-            <li><a href="./gallery.html">gallery</a></li>
-            <li><a href="./print-info.html">print info</a></li>
-            <li><a class="active" href="">contact</a></li>
-          </ul>
-        </div>
+      <div class="left">
+        <div class="logo">Steve Balcourt</div>
+        <div>Photographic Artist</div>
       </div>
-      <div class="contact">
-        <h1>Contact</h1>
-      </div> 
+      <div class="right">
+        <ul class="links">
+          <li><a href="../index.html">home</a></li>
+          <li><a href="./gallery.html">gallery</a></li>
+          <li><a href="./print-info.html">print info</a></li>
+          <li><a class="active" href="">contact</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="contact">
+      <h1>Contact</h1>
+    </div>
 
-      <div class="contact-container">
-        <div class="bio-img">
-          <img src="../images/stevecamera.jpg" alt="Steve taking picture" />
-        </div>
-        <div class="left">
-          <p>You can contact Steve Balcourt at his email address steve@stevebalcourtphoto.com. He will answer all requests on a timely basis.</p>
-        </div>
-        <div class="bio-img">
-          <img src="../images/stevecamera2.jpg" alt="Steve standing by Camera" />
-        </div>
+    <div class="contact-container">
+      <div class="bio-img">
+        <img src="../images/My project-2.jpg" alt="Steve taking picture" />
       </div>
-  
+      <div class="left">
+        <p>
+          You can contact Steve Balcourt at his email address
+          steve@stevebalcourtphoto.com. He will answer all requests on a timely
+          basis.
+        </p>
+      </div>
+      <div class="bio-img">
+        <img src="../images/stevecamera2.jpg" alt="Steve standing by Camera" />
+      </div>
+    </div>
 
-      <div class="footer">
-        <p>Copyright ©1999-Present Steve Balcourt. All Rights Reserved.</p>
-      </div>
-  
-      <div class="site-by">
-        <p>Site by <a href="https://jareds-portfolio.herokuapp.com">Jared Young</a></p>
-      </div>
+    <div class="footer">
+      <p>Copyright ©1999-Present Steve Balcourt. All Rights Reserved.</p>
+    </div>
+
+    <div class="site-by">
+      <p>
+        Site by <a href="https://jareds-portfolio.herokuapp.com">Jared Young</a>
+      </p>
+    </div>
   </body>
 </html>
