Fixed placement on new img added on contact page and added flex: 1

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -27,17 +27,15 @@
     </div>
 
     <div class="contact-container">
-      <div class="bio-img">
+      <div class="contact-img">
         <img src="../images/My project-2.jpg" alt="Steve taking picture" />
       </div>
-      <div class="left">
         <p>
           You can contact Steve Balcourt at his email address
           steve@stevebalcourtphoto.com. He will answer all requests on a timely
           basis.
         </p>
-      </div>
-      <div class="bio-img">
+      <div class="contact-img-2">
         <img src="../images/stevecamera2.jpg" alt="Steve standing by Camera" />
       </div>
     </div>
