Added titles to both img's on contact screen and centered everything

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -29,14 +29,18 @@
     <div class="contact-container">
       <div class="contact-img">
         <img src="../images/My project-2.jpg" alt="Steve taking picture" />
+        <div class="img-1-info">1935 Ansco Agfa 8X10 Wood Field Camera</div>
       </div>
-        <p>
-          You can contact Steve Balcourt at his email address
-          steve@stevebalcourtphoto.com. He will answer all requests on a timely
-          basis.
-        </p>
+      <div class="contact-me">
+      <p>
+        You can contact Steve Balcourt at his email address
+        steve@stevebalcourtphoto.com. He will answer all requests on a timely
+        basis.
+      </p>
+    </div>
       <div class="contact-img-2">
         <img src="../images/stevecamera2.jpg" alt="Steve standing by Camera" />
+        <div class="img-1-info">1935 Ansco Agfa 8X10 Wood Field Camera</div>
       </div>
     </div>
 
