Corrected both img captions on contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -29,7 +29,7 @@
     <div class="contact-container">
       <div class="contact-img">
         <img src="../images/My project-2.jpg" alt="Steve taking picture" />
-        <div class="img-1-info">1935 Ansco Agfa 8X10 Wood Field Camera</div>
+        <div class="img-1-info">1935 Agfa Ansco 8X10 Wood Field Camera</div>
       </div>
       <div class="contact-me">
       <p>
@@ -40,7 +40,7 @@
     </div>
       <div class="contact-img-2">
         <img src="../images/stevecamera2.jpg" alt="Steve standing by Camera" />
-        <div class="img-1-info">1935 Ansco Agfa 8X10 Wood Field Camera</div>
+        <div class="img-1-info">Zone IV 8x10 Wood Field Camera</div>
       </div>
     </div>
 
