Added 3rd image to home screen

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
           >
         </p>
       </div>
+      <div>
+        <img src="images/My project-3.jpg" alt="Man Taking Picture" />
+      </div>
       <div class="bio-img">
         <img src="images/pic.jpg" alt="Man Taking Picture" />
         <div class="bio-img-2">
