Temp fixed placement on 3rd image on home screen until i find a more flexible and suitable fix

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           >
         </p>
       </div>
-      <div>
+      <div class="home-img">
         <img src="images/My project-3.jpg" alt="Man Taking Picture" />
       </div>
       <div class="bio-img">
