Replaced header img with edited version per customer request

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div>
-      <img src="images/Scan 16.jpeg" alt="Man Taking Picture" />
+      <img src="images/Scan 16 2.jpeg" alt="Man Taking Picture" />
     </div>
 
     <div class="bio-container">
